attempted fix font size on mobile

--- a/amin_website.css
+++ b/amin_website.css
@@ -4,6 +4,12 @@ html, body {
   overflow: hidden;
   margin: 0px;
   padding: 0px;
+
+  /* Fix font size on iphone and mobie devices */
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: none;
+  /* Fix font weight on safari */
+  -webkit-font-smoothing: subpixel-antialiased;  
 }
 @font-face {
     font-family: trench;
@@ -189,21 +195,26 @@ h1{
 }
 .map {
   background-image: url(map.png);
+  max-width: 3956px;
+  max-height: 1615px;
+  display: block;
+  /*min-height: 989px;*/
+  /*min-width: 404px;*/
   -webkit-transform: translate3d(14vw, 0, 0);
   transform: translate3d(14vw, 0, 0);
-  margin-top: 17vh;
+  margin-top: 19vh;
   background-size: 75vw 75vh;
   position: relative;
   background-repeat: no-repeat;
-  height: 75vh;
-  width: 75vw;
+  height: 100%;
+  width: 100%;
 }
 .gps-ring {
     border: 3px solid #c24141;
     -webkit-border-radius: 30px;
     height: 18px;
     width: 18px;
-    left: 26%;
+    left: 19%;
     top: 35%;
     position: absolute;
     -webkit-animation: pulsate 1s ease-out;
